# como-lang-ng

./: Makefile.am  bootstrap  configure.ac
src/: Makefile.am
